# updatedeployqt

./: .QtUpdateBridges.weakRef  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-and-deploy.sh  build-base.sh  build-tools.sh
QtPluginInjector/: LICENSE  QtPluginInjector.cc  QtPluginInjector.hpp  QtPluginInjector.pri  README.md  Timer.cc  Timer_p.cc  install_build_utils.sh  main.sh
QtPluginInjector/Qt5.10.0/: linux_main.sh
QtPluginInjector/Qt5.6.0/: linux_main.sh  qxcbmain.cpp
QtPluginInjector/Qt5.7.0/: qxcbmain.cpp
QtPluginInjector/Qt5.8.0/: qxcbmain.cpp
QtPluginInjector/Qt5.9.0/: linux_main.sh
appdir/: .DirIcon  updatedeployqt.desktop
base/: README.md
base/QtPluginInjector/: .travis.yml  AppImageUpdaterBridgeInterface.hpp  QtPluginInjector.cc  QtPluginInjector.hpp  QtPluginInjector.pri  QtPluginInjector.pro  Timer.hpp  Timer_p.hpp
base/QtPluginInjector/Qt5.10.0/: linux_main.sh  qxcbmain.cpp
base/QtPluginInjector/Qt5.6.0/: linux_main.sh
base/QtPluginInjector/Qt5.7.0/: linux_main.sh
base/QtPluginInjector/Qt5.8.0/: linux_main.sh
base/QtPluginInjector/Qt5.9.0/: linux_main.sh  qxcbmain.cpp
base/QtPluginInjector/sandbox/: main.cc  sandbox.pro
include/: appdir_context.h  args_parser.h  bridge_deployer.h  config_generator.h  config_manager.h  config_writer.h  deploy_info.h  downloader.h  injector.h  ldd_process.h  library_deployer.h  logger.h  md5.h  qmake_process.h  qt_version_info.h  utils.h
scripts/: download_bridges.sh  download_xcb_plugins.sh  update_qtupdatebridges.sh
src/: appdir_context.c  args_parser.c  bridge_deployer.c  config_generator.c  config_manager.c  config_writer.c  deploy_info.c  downloader.c  injector.c  json_builder.c  ldd_process.c  library_deployer.c  logger.c  main.c  md5.c  qmake_process.c  qt_version_info.c  utils.c
tests/: display_bridge_settings.c
